--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <body>
     <a-scene mindar-image="imageTargetSrc: ./targets.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
-		  <video id="videoIciar" preload="auto" loop playsinline  webkit-playsinline crossOrigin="anonymous" src="./videoIciar.mp4"></video>
+		  <video id="videoIciar" preload="auto" loop playsinline autoplay webkit-playsinline crossOrigin="anonymous" src="./videoIciar.mp4"></video>
 		  <!--<video id="videoAmigos" preload="auto" loop playsinline crossOrigin="anonymous" src="./videoAmigos.mp4"></video>-->
 	  </a-assets>
 
